# the-cmake-preset-matrix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  SUPPORT.md  SUPPORT.rst  conf.py  conftest.py  cspell.config.yaml  index.rst  project-words.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml  gh-pages-static.yml  publish-to-pypi.yml  schedule-update-actions.yml
docs/: appendix.rst  cli.rst
docs/guide/: index.rst
src/tcpm/: __init__.py  __main__.py  _cli.py  _core.py  _data_model.py  _errors.py  _generators.py  _pquery.py  _rendering.py  _utility.py  version.py
src/tcpm/cli/: __init__.py  _parser.py
tests/: CMakePresets.json  pquery_test_0.json  preset_test_excluded.json  preset_test_ignore_unmanaged.json  test_cli.py  test_core.py  test_pquery.py
tryme/: CMakePresetsVendorTemplate.json  README.rst  index.rst
